# drug-language-model

./: .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.local.yml  docker-compose.production.yml  pyproject.toml
app/: config.py  db.py  gemini.py  llm.py  main.py  schema_docs.py  utils.py
app/templates/: index.html
data/: 02-create_simplified_views.sql  README.txt
